<resources>
    <string name="app_name">SahlSample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="enter_your_note">Enter Your Note</string>
    <string name="add_note">Add Note</string>

</resources>