<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable name="viewModel" type="com.kamal.sahlsample.ui.register.RegisterViewModel"/>
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            tools:context=".ui.login.LoginFragment">


        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="200dp"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/etName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:hint="@string/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/etMobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:background="@color/teal_700"
                android:text="@string/register"
                app:layout_constraintStart_toStartOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                android:layout_width="0dp" android:layout_height="wrap_content"/>


        <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{viewModel.loading?View.VISIBLE:View.GONE}"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                android:layout_height="wrap_content"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
